# mcp-excel-server

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/agents/: commit-writer.md  documenter.md  planner.md  reviewer.md  tester.md
docs/: CONFIGURATION.md  TOOLS.md  TROUBLESHOOTING.md
examples/: basic_usage.py  create_sample.py
examples/data/: sample.xlsx
skills/excel-analysis/: SKILL.md
skills/excel-formulas/: SKILL.md
skills/excel-reading/: SKILL.md
skills/excel-writing/: SKILL.md
src/mcp_excel/: __init__.py  __main__.py  config.py  server.py
src/mcp_excel/backends/: __init__.py  base.py  factory.py  openpyxl_backend.py  xlwings_backend.py
src/mcp_excel/prompts/: __init__.py  templates.py
src/mcp_excel/resources/: __init__.py  excel.py
src/mcp_excel/tools/: __init__.py  charts.py  formulas.py  inspect.py  read.py  tables.py  vba.py  write.py
src/mcp_excel/utils/: __init__.py  audit.py  backend.py  cache.py  common.py  headers.py  paging.py  rate_limiter.py  validation.py  vba_templates.py  vba_validator.py
tests/: __init__.py  conftest.py  test_basic.py
tests/contract/: __init__.py  test_schemas.py
tests/integration/: __init__.py  test_charts_tools.py  test_formulas_tools.py  test_inspect_tools.py  test_read_tools.py  test_tables_tools.py  test_vba_tools.py  test_write_tools.py
tests/unit/: __init__.py  test_backend.py  test_cache.py  test_headers.py  test_paging.py  test_security.py
