[tool.poetry]
name = "mcp-excel-server"
version = "0.1.0"
description = "MCP server for Excel file manipulation - read, write, formulas, charts, and tables"
authors = ["Mario <mario@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/username/mcp-excel-server"
repository = "https://github.com/username/mcp-excel-server"
keywords = ["mcp", "excel", "model-context-protocol", "spreadsheet", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering",
]
packages = [{include = "mcp_excel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = ">=2.0,<3"
openpyxl = "^3.1.5"
pydantic = "^2.0"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
ruff = "^0.8"
mypy = "^1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
